@@ -1,4 +1,6 @@
 lldpd (0.7.3)
+  * Features:
+    + DragonFly BSD support.
   * Fixes:
     + Fix IPv4/IPv6 address discovery in Linux.
 
